--- a/make/action.yaml
+++ b/make/action.yaml
@@ -13,7 +13,7 @@ runs:
       shell: bash
       env:
         GITHUB_ACTION_PATH: ${{ github.action_path }}
-    - run: echo $pwd
+    - run: pwd
       shell: bash
     - name: Run Makefile
       run: make -f ${{ github.action_path }}/Makefile.mk echo
