--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,6 @@ jobs:
       - id: foo
         uses: codimite-devops/cluster-config-gen-action/make@main
         with:
-          who-to-greet: 'Mona the Octocat'
+          target: pr
       - run: pwd
         shell: bash
