--- a/make/action.yaml
+++ b/make/action.yaml
@@ -5,12 +5,16 @@ inputs:
     description: 'target to apply, pr or apply'
     required: true
     default: 'apply'
-  name:
+  repo:
     required: true
     description: 'Name of the repository'
   github-token:
     required: true
     description: 'Github Token'
+  working-directory:
+    required: true
+    description: Where to run the action
+    default: '.'
   copy-source:
     default: no-copy-source
     description: ''
@@ -36,8 +40,9 @@ runs:
       env:
         GITHUB_ACTION_PATH: ${{ github.action_path }}
     - name: Run Makefile
-      run: COPY_SOURCE=${{ inputs.copy-source }} GENERATE_SCHEDULER=${{inputs.gitops-scheduler }} REPOSITORY_RESOLVE=${{ inputs.repository-resolve }} GITOPS_WEBHOOK_UPDATE=${{ inputs.gitops-webhook-update }} HELMFILE_USE_SELECTORS=${{ inputs.helmfile_use_selectors }} make -f ${{ github.action_path }}/Makefile.mk ${{ inputs.target }} 
+      run: REPO=${{ inputs.repo }} COPY_SOURCE=${{ inputs.copy-source }} GENERATE_SCHEDULER=${{inputs.gitops-scheduler }} REPOSITORY_RESOLVE=${{ inputs.repository-resolve }} GITOPS_WEBHOOK_UPDATE=${{ inputs.gitops-webhook-update }} HELMFILE_USE_SELECTORS=${{ inputs.helmfile_use_selectors }} make -f ${{ github.action_path }}/Makefile.mk ${{ inputs.target }} 
       shell: bash
+      working-directory: ${{ inputs.working-directory }}
       env:
         GITHUB_TOKEN: ${{ inputs.github-token }}
 
