--- a/make/action.yaml
+++ b/make/action.yaml
@@ -45,7 +45,7 @@ runs:
       shell: bash
       working-directory: ${{ inputs.working-directory }}
       env:
-        INCLUDE_DIRS: '-f ${{ github.action_path }}'
+        MAKEFILES: '${{ github.action_path }}/Makefile.mk'
         GITHUB_TOKEN: ${{ inputs.github-token }}
         REPO: ${{ inputs.repo }}
         COPY_SOURCE: ${{ inputs.copy-source }}
