--- a/pr/action.yaml
+++ b/pr/action.yaml
@@ -25,30 +25,25 @@ runs:
   steps: 
   - name: install
     uses: codimite-devops/cluster-config-gen-action/install@main
-  - name: Set GitHub Path
-    run: echo "$GITHUB_ACTION_PATH" >> $GITHUB_PATH
-    shell: bash
-    env:
-      GITHUB_ACTION_PATH: ${{ github.action_path }}
   - name: export env
     shell: bash
     run: |
-      echo "PULL_BASE_REF=$PULL_BASE_REF" >> $GITHUB_PATH
-      echo "PULL_BASE_SHA=$PULL_BASE_SHA" >> $GITHUB_PATH
-      echo "PULL_NUMBER=$PULL_NUMBER" >> $GITHUB_PATH
-      echo "PULL_PULL_REF=$PULL_PULL_REF" >> $GITHUB_PATH
-      echo "PULL_PULL_SHA=$PULL_PULL_SHA" >> $GITHUB_PATH
-      echo "PULL_REFS=$PULL_REFS" >> $GITHUB_PATH
-      echo "JOB_NAME=$JOB_NAME" >> $GITHUB_PATH
-      echo "JOB_SPEC=$JOB_SPEC" >> $GITHUB_PATH
-      echo "JOB_TYPE=$JOB_TYPE" >> $GITHUB_PATH
-      echo "REPO_NAME=$REPO_NAME" >> $GITHUB_PATH
-      echo "REPO_OWNER=$REPO_OWNER" >> $GITHUB_PATH
-      echo "REPO_URL=$REPO_URL" >> $GITHUB_PATH
-      echo "JX_KUBERNETES=$JX_KUBERNETES" >> $GITHUB_PATH
-      echo "SOURCE_DIR=$SOURCE_DIR" >> $GITHUB_PATH
-      echo "GIT_AUTHOR_NAME=$GIT_AUTHOR_NAME" >> $GITHUB_PATH
-      echo "GIT_AUTHOR_EMAIL=$GIT_AUTHOR_EMAIL" >> $GITHUB_PATH
+      echo "PULL_BASE_REF=$PULL_BASE_REF" >> $GITHUB_ENV
+      echo "PULL_BASE_SHA=$PULL_BASE_SHA" >> $GITHUB_ENV
+      echo "PULL_NUMBER=$PULL_NUMBER" >> $GITHUB_ENV
+      echo "PULL_PULL_REF=$PULL_PULL_REF" >> $GITHUB_ENV
+      echo "PULL_PULL_SHA=$PULL_PULL_SHA" >> $GITHUB_ENV
+      echo "PULL_REFS=$PULL_REFS" >> $GITHUB_ENV
+      echo "JOB_NAME=$JOB_NAME" >> $GITHUB_ENV
+      echo "JOB_SPEC=$JOB_SPEC" >> $GITHUB_ENV
+      echo "JOB_TYPE=$JOB_TYPE" >> $GITHUB_ENV
+      echo "REPO_NAME=$REPO_NAME" >> $GITHUB_ENV
+      echo "REPO_OWNER=$REPO_OWNER" >> $GITHUB_ENV
+      echo "REPO_URL=$REPO_URL" >> $GITHUB_ENV
+      echo "JX_KUBERNETES=$JX_KUBERNETES" >> $GITHUB_ENV
+      echo "SOURCE_DIR=$SOURCE_DIR" >> $GITHUB_ENV
+      echo "GIT_AUTHOR_NAME=$GIT_AUTHOR_NAME" >> $GITHUB_ENV
+      echo "GIT_AUTHOR_EMAIL=$GIT_AUTHOR_EMAIL" >> $GITHUB_ENV
     env:
       PULL_BASE_REF: ${{ github.base_ref }}
       PULL_BASE_SHA: ${{ github.event.pull_request.base.sha }}
