--- a/make/action.yaml
+++ b/make/action.yaml
@@ -8,23 +8,23 @@ inputs:
   repo:
     required: true
     description: 'Name of the repository'
-  github-token:
+  github_token:
     required: true
     description: 'Github Token'
-  working-directory:
+  working_directory:
     required: true
     description: Where to run the action
     default: '.'
-  copy-source:
+  copy_source:
     default: no-copy-source
     description: ''
-  gitops-scheduler:
+  gitops_scheduler:
     default:  no-gitops-scheduler
     description: ''
-  repository-resolve:
+  repository_resolve:
     default:  no-repository-resolve
     description: ''
-  gitops-webhook-update:
+  gitops_webhook_update:
     default: no-gitops-webhook-updateb
     description: ''
   helmfile_use_selectors:
@@ -43,14 +43,14 @@ runs:
       run: |
         make ${{ inputs.target }} 
       shell: bash
-      working-directory: ${{ inputs.working-directory }}
+      working-directory: ${{ inputs.working_directory }}
       env:
         MAKEFILES: '${{ github.action_path }}/Makefile.mk'
-        GITHUB_TOKEN: ${{ inputs.github-token }}
+        GITHUB_TOKEN: ${{ inputs.github_token }}
         REPO: ${{ inputs.repo }}
-        COPY_SOURCE: ${{ inputs.copy-source }}
-        GENERATE_SCHEDULER: ${{inputs.gitops-scheduler }}
-        REPOSITORY_RESOLVE: ${{ inputs.repository-resolve }}
-        GITOPS_WEBHOOK_UPDATE: ${{ inputs.gitops-webhook-update }}
+        COPY_SOURCE: ${{ inputs.copy_source }}
+        GENERATE_SCHEDULER: ${{inputs.gitops_scheduler }}
+        REPOSITORY_RESOLVE: ${{ inputs.repository_resolve }}
+        GITOPS_WEBHOOK_UPDATE: ${{ inputs.gitops_webhook_update }}
         HELMFILE_USE_SELECTORS: ${{ inputs.helmfile_use_selectors }}
 
