--- a/pr/action.yaml
+++ b/pr/action.yaml
@@ -5,12 +5,15 @@ inputs:
     description: 'target to apply, pr or apply'
     required: true
     default: 'apply'
-  repo:
+  repo_name:
     required: true
     description: 'Name of the repository'
   github_token:
     required: true
     description: 'Github Token'
+  kubectl_apply:
+    description: 'type of the repository'
+    default: no-kubectl-apply
   working_directory:
     required: true
     description: Where to run the action
@@ -72,6 +75,7 @@ runs:
     if: github.event_name == 'pull_request'
     with:
       target: pr
-      repo: ${{ github.event.repository.name }}
+      repo_name: ${{ github.event.repository.name }}
       github_token: ${{ inputs.github_token }}
       working_directory: ${{ inputs.working_directory }}
+      kubectl_apply: ${{ inputs.kubectl_apply }}
