--- a/apply/action.yaml
+++ b/apply/action.yaml
@@ -22,6 +22,17 @@ inputs:
     description: 'Workload Identity Provider to access artifactory'
   service_account:
     description: 'Workload Identity SA to access artifactory'
+  cluster_project_id:
+    description: 'Cluster Project ID'
+    default: ""
+  cluster_project_location:
+    description: 'Cluster Location'
+    default: ""
+  cluster_name:
+    description: 'Cluster Name'
+    default: ""
+
+  
 
 runs:
   using: "composite"
@@ -35,18 +46,14 @@ runs:
   - run: |
       git config --global --add safe.directory '*'
     shell: bash
-  - id: "auth"
-    name: "Authenticate to Google Cloud"
-    uses: "google-github-actions/auth@v2"
+  - name: make-apply
+    uses: codimite-devops/cluster-config-gen-action/auth@main
     with:
-      token_format: "access_token"
       workload_identity_provider: ${{ inputs.workload_identity_provider }}
       service_account: ${{ inputs.service_account }}
-  - uses: "docker/login-action@v3"
-    with:
-      registry: "us-central1-docker.pkg.dev" # or
-      username: "oauth2accesstoken"
-      password: "${{ steps.auth.outputs.access_token }}"
+      cluster_project_id: ${{ inputs.cluster_project_id }}
+      cluster_project_location: ${{ inputs.cluster_project_location }}
+      cluster_name: ${{ inputs.cluster_name }}
   - name: make-apply
     uses: codimite-devops/cluster-config-gen-action/make@main
     with:
